# stac-lake

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
notebooks/: pystac-tech-assessment.ipynb
notebooks/.ipynb_checkpoints/: pystac-tech-assessment-checkpoint.ipynb
stac_lake/: collection.py
staclake/: collection.py  registry.py
tests/: test_collection.py  test_registry.py
