[project]
name = "stac-lake"
version = "0.1.0"
description = "STAC-powered data lake for geospatial rasters."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pystac",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.10",
    "jupyter",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"